# maxa-data-science

./: .env.example  README.md  pyproject.toml  visualize.py
notebooks/: fresh_analysis.ipynb  imports.py
src/: connector.py
