[tool.poetry]
name = "maxa-data-science"
version = "0.1.0"
description = ""
authors = ["Emile Dimas <emile.dimas@maxa.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.5"
pymc3 = "^3.11.5"
xgboost = "^2.0.3"
plotly = "^5.18.0"
snowflake-connector-python = {extras = ["pandas", "secure-local-storage"], version = "^3.7.0"}
jupyter = "^1.0.0"
python-dotenv = "^1.0.1"
streamlit = "^1.31.0"
streamlit = "^1.31.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
